# ITI_Embedded_AVR_Playground

./: .gitattributes  README.md
APP/: CMakeLists.txt
APP/inc/: main.h
APP/src/: main.c
COTS/: avr-simul-gdb-debug.cmake  convert-to-hex-plus-flash.cmake
COTS/Common/CONFIG/: HAL_CFG.h
COTS/Common/inc/: MDIO_Registers.h  MEXTI_Registers.h  MTIMER_Registers.h  MUSART_Registers.h  SFIOR_CFG.h
COTS/HAL/H7SEGMENT/: CMakeLists.txt
COTS/HAL/H7SEGMENT/inc/: H7SEGMENT.h  H7SEGMENT_LCFG.h
COTS/HAL/H7SEGMENT/src/: H7SEGMENT.c  H7SEGMENT_LCFG.c
COTS/HAL/HKEYPAD/: CMakeLists.txt
COTS/HAL/HKEYPAD/inc/: HKEYPAD.h  HKEYPAD_LCFG.h  HKEYPAD_PBCFG.h
COTS/HAL/HKEYPAD/src/: HKEYPAD.c  HKEYPAD_LCFG.c
COTS/HAL/HLCD/: CMakeLists.txt
COTS/HAL/HLCD/inc/: HLCD.h  HLCD_PBCFG.h
COTS/HAL/HLCD/src/: HLCD.c
COTS/HAL/HLED/: CMakeLists.txt
COTS/HAL/HLED/inc/: HLED.h  HLED_LCFG.h
COTS/HAL/HLED/src/: HLED.c  HLED_LCFG.c  MDIO.c
COTS/HAL/HSCHEDULER/: CMakeLists.txt
COTS/HAL/HSCHEDULER/inc/: HSCHEDULER.h  HSCHEDULER_LCFG.h
COTS/HAL/HSCHEDULER/src/: HSCHEDULER.c  HSCHEDULER_LCFG.c
COTS/HAL/HSWITCH/: CMakeLists.txt  README.md
COTS/HAL/HSWITCH/inc/: HSWITCH.h  HSWITCH_LCFG.h  MDIO.h  MDIO_PBCFG.h
COTS/HAL/HSWITCH/src/: HSWITCH.c  HSWITCH_LCFG.c
COTS/MCAL/MADC/: CMakeLists.txt
COTS/MCAL/MDIO/: CMakeLists.txt
COTS/MCAL/MDIO/inc/: MDIO.h  MDIO_LCFG.h  MDIO_PBCFG.h
COTS/MCAL/MDIO/src/: MDIO.c  MDIO_LCFG.c
COTS/MCAL/MEXTI/: CMakeLists.txt
COTS/MCAL/MEXTI/inc/: MEXTI.h
COTS/MCAL/MEXTI/src/: MEXTI.c
COTS/MCAL/MGIE/: CMakeLists.txt
COTS/MCAL/MGIE/inc/: MGIE.h
COTS/MCAL/MGIE/src/: MGIE.c
COTS/MCAL/MPORT/: CMakeLists.txt
COTS/MCAL/MPORT/inc/: MPORT.h  MPORT_LCFG.h  MPORT_PBCFG.h
COTS/MCAL/MPORT/src/: MPORT.c  MPORT_LCFG.c
COTS/MCAL/MTIMER/: CMakeLists.txt
COTS/MCAL/MTIMER/inc/: MTIMER.h
COTS/MCAL/MTIMER/src/: MTIMER.c  MTIMER_LCFG.c
COTS/MCAL/MUSART/: CMakeLists.txt
COTS/MCAL/MUSART/inc/: MUSART.h
COTS/MCAL/MUSART/src/: MUSART.c  MUSART_LCFG.c
COTS/STD_LIB/inc/: bit_math.h  std_types.h
GDB_CFG/: gdb.cfg
Labs/Lab_01/Task_1/: main.c
Labs/Lab_01/Task_2/: CMakeLists.txt  main.c
Labs/Lab_01/Task_3/: main.c
Labs/Lab_01/Task_4/: main.c
Labs/Lab_02/Task1/App/: ITI_AVR_Task2.componentinfo.xml  ITI_AVR_Task2.cproj  MDIO.c  main.c
Labs/Lab_02/Task1/Simulation/: New Project.pdsprj
Labs/Lab_02/Task2/App/: ITI_AVR_Task1.componentinfo.xml  ITI_AVR_Task1.cproj  MDIO.h  main.c
Labs/Lab_02/Task2/Simulation/: Last Loaded New Project.pdsbak  New Project.pdsprj  New Project.pdsprj.DESKTOP-UKNS64P.Nemesis.workspace
Labs/Lab_03/Task_1/Hex_File/: AVR_PROJECT1.hex
Labs/Lab_04/Task_1/: CMakeLists.txt
Labs/Lab_04/Task_1/Simulation/: New Project.pdsprj
Labs/Lab_05/Simulation/: New Project.pdsprj
Labs/Lab_06/Simulation/: New Project - Copy.pdsprj
Labs/Lab_06/inc/: main.h
Labs/Lab_07/Simulation/: LCD_Test.pdsprj
Labs/Lab_08/Simulation/: Assignment_1.pdsprj
Labs/Lab_08/src/: main.c
Labs/Lab_10/Simulation/: Assignment_1.pdsprj
Labs/Lab_10/src/: main.c
TOOLCHAIN/: avr-gcc.cmake
TOOLCHAIN_SETTINGS/: avr-gcc.cmake
UnityUnitTests/: README.md
UnityUnitTests/HAL/H7SEGMENT/: CMakeLists.txt
UnityUnitTests/HAL/H7SEGMENT/inc/: H7SEGMENT.h  H7SEGMENT_LCFG.h  MDIO.h
UnityUnitTests/HAL/H7SEGMENT/src/: H7SEGMENT.c  H7SEGMENT_LCFG.c  MDIO.c
UnityUnitTests/HAL/HLED/: CMakeLists.txt
UnityUnitTests/HAL/HLED/inc/: HLED.h  HLED_LCFG.h  MDIO_MockReg.h  MPORT_LCFG.h  MPORT_PBCFG.h  test.h
UnityUnitTests/HAL/HLED/src/: HLED.c  HLED_LCFG.c  main.c  test.c
UnityUnitTests/HAL/HSWITCH/: CMakeLists.txt
UnityUnitTests/HAL/HSWITCH/inc/: HSWITCH.h  HSWITCH_LCFG.h  MPORT.h  bit_math.h
UnityUnitTests/HAL/HSWITCH/src/: HSWITCH.c  HSWITCH_LCFG.c  MPORT.c
UnityUnitTests/MCAL/MDIO/: CMakeLists.txt
UnityUnitTests/MCAL/MDIO/inc/: MDIO_PBCFG.h  test.h
UnityUnitTests/MCAL/MDIO/src/: test.c
UnityUnitTests/MCAL/MPORT/inc/: test.h
UnityUnitTests/MCAL/MPORT/src/: MPORT_LCFG.c  main.c  test.c
UnityUnitTests/MDIO/: CMakeLists.txt
UnityUnitTests/MDIO/inc/: MDIO.h  MDIO_MockReg.h  MDIO_PBCFG.h  bit_math.h  std_types.h  test.h
UnityUnitTests/MDIO/src/: MDIO.c  main.c  test.c
UnityUnitTests/MPORT/: CMakeLists.txt
UnityUnitTests/MPORT/inc/: MDIO_MockReg.h  MPORT.h  MPORT_LCFG.h  MPORT_PBCFG.h
UnityUnitTests/MPORT/src/: MPORT.c  MPORT_LCFG.c
